fix: fix dicount percentange price
